--- a/Model/html/kb3.html
+++ b/Model/html/kb3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="style.css" rel="stylesheet" media="all">
+<link href="style3.css" rel="stylesheet" media="all">
 <meta charset="windows-1251">
 
 </head>
@@ -10,16 +10,21 @@
 <!-- kb --><div id="keyboard">
 <table border=0><!--dev border=1-->
 
-<tr id="umov"><td colspan="3"></td>
 
-<th id="numkey" rowspan="2">
+
+
 <!-- num keyboard <div class="key nc"></div>-->
+<!--<div class="key1x1 l1">&larr;</div>-->
+<!--
+<tr id="umov"><td colspan="3"></td>
+<th id="numkey" rowspan="2">
+
 <div class="block">
 <div class="key1x1 l1 koff">Num Lock</div>
 <div class="key1x1 l1">C</div>
 <div class="key1x1 l1">D</div><div class="key1x1 l1">E</div><div class="key1x1 l1">F</div>
 
-<!--<div class="key1x1 l1">&larr;</div>-->
+
 <div class="clear"></div><div class="key1x1 nc"></div>
 <div class="key1x1 l1">A</div><div class="key1x1 l1">B</div>
 <div class="key1x1 l1">/</div>
@@ -47,10 +52,14 @@
 
 
 </div>
-<!-- end num keyboard -->
+
 </th>
 
 </tr>
+-->
+<!-- end num keyboard -->
+
+
 
 
 <tr>
@@ -72,6 +81,8 @@
 </div>
 <!-- end f kb -->
 <!-- main kb left-->
+
+
 <div class="block">
 
 
@@ -129,6 +140,9 @@
 
 <div class="key1x1 l1">&rarr;</div>
 <!--<div class="nc50 nc6"></div>-->
+
+<div class="nc50 "></div>
+
 
 <div class="key1x125 l1">FN</div>
 
