--- a/Model/html/kb4.html
+++ b/Model/html/kb4.html
@@ -71,28 +71,32 @@
 <tr>
 
 <!-- left kb --><td id="lkb" class="lrkb">
-<!-- f kb --><div class="block">
 
-<div class="clear"></div>
-
-<div class="key1x1 l1">ESC</div>
-
-
-<!-- -->
-<div class="key1x1 l1 key_sl">Scroll&nbsp;Lock</div><div class="clear"></div>
-
-
-<div class="key1x1 l1">Insert</div><div class="key1x1 l1"><div class="key50">Pause</div>Break</div><div class="clear"></div>
-
-<div class="key1x1 l1">Page Up</div><div class="key1x1 l1">Home</div><div class="clear"></div>
-<div class="key1x1 l1">Page Down</div><div class="key1x1 l1">End</div><div class="clear"></div>
-
+<!-- f1 kb -->
+<div class="block">
+<div class="key1x1 l1">ESC</div><div class="clear"></div>
+<div class="key1x1 l1">Page Up</div><div class="clear"></div>
+<div class="key1x1 l1">Page Down</div><div class="clear"></div>
+<div class="key1x1 l1">Insert</div><div class="clear"></div>
 <div class="nc50"></div><div class="clear"></div>
-<div class="key1x1 nc"></div><div class="key1x1 l1">&uarr;</div><div class="clear"></div>
-<div class="key1x1 l1">&larr;</div><div class="key1x1 l1">&darr;</div>
+<div class="key1x1 l1">&larr;</div><div class="clear"></div>
 </div>
-<!-- end f kb -->
+<!-- end f1 kb -->
+
+<!-- f2 kb --><div class="block">
+<div class="clear"></div>
+<div class="key1x1 l1"><div class="key50">Pause</div>Break</div><div class="clear"></div>
+<div class="key1x1 l1">Home</div><div class="clear"></div>
+<div class="key1x1 l1">End</div><div class="clear"></div>
+<div class="nc50"></div><div class="clear"></div>
+<div class="key1x1 l1">&uarr;</div><div class="clear"></div>
+<div class="key1x1 l1">&darr;</div>
+</div>
+<!-- end f2 kb -->
+
+
 <!-- main kb left-->
+
 
 
 <div class="block">
@@ -102,22 +106,27 @@
 <div class="clear"></div>
 
 <!--<div class="nc50 nc1"></div>-->
+<!--
 <div class="nc50 nc1a"></div>
+
 <div class="key1x1 l1">F1</div><div class="key1x1 l1">F2</div><div class="key1x1 l1">F3</div><div class="key1x1 l1">F4</div><div class="nc50"></div>
-<div class="key1x1 l1">F5</div><div class="key1x1 l1">F6</div>
+-->
+<!--<div class="key1x1 l1">F5</div><div class="key1x1 l1">F6</div>-->
 <div class="clear"></div>
 <div class="nc50"></div><div class="clear"></div>
+
+<!--<div class="key1x1 nc"></div>-->
 
 <!--<div class="nc50 nc2"></div>-->
 <div class="nc50 nc2a"></div>
 
 <div class="key1x1 l1"><div>~</div><div></div><div>`</div>¨</div>
-<div class="key1x1 l1"><div>!</div><div></div><div>1</div></div>
-<div class="key1x1 l1"><div>@</div><div>&quot;</div><div>2</div></div>
-<div class="key1x1 l1"><div>#</div><div>¹</div><div>3</div></div>
-<div class="key1x1 l1"><div>$</div><div>;</div><div>4</div></div>
-<div class="key1x1 l1"><div>%</div><div></div><div>5</div></div>
-<div class="key1x1 l1"><div>^</div><div>:</div><div>6</div></div>
+<div class="key1x1 l1"><div>!</div><div></div><div>1</div><div>F1</div></div>
+<div class="key1x1 l1"><div>@</div><div>&quot;</div><div>2</div><div>F2</div></div>
+<div class="key1x1 l1"><div>#</div><div>¹</div><div>3</div><div>F3</div></div>
+<div class="key1x1 l1"><div>$</div><div>;</div><div>4</div><div>F4</div></div>
+<div class="key1x1 l1"><div>%</div><div></div><div>5</div><div>F5</div></div>
+<div class="key1x1 l1"><div>^</div><div>:</div><div>6</div><div>F6</div></div>
 <div class="clear"></div>
 
 <!--<div class="nc50 nc3"></div>-->
@@ -179,21 +188,35 @@
 
 <!-- right kb -->
 <!-- main kb right--><td id="rkb" class="lrkb">
-<div class="block"><div class="key1x1 l1">F7</div><div class="key1x1 l1">F8</div><div class="nc50"></div>
-<div class="key1x1 l1">F9</div><div class="key1x1 l1">F10</div><div class="key1x1 l1">F11</div><div class="key1x1 l1">F12</div><div class="nc50"></div>
 
-<div class="key1x1 l1">Delete</div>
+<div class="block">
+<!--
+<div class="key1x1 l1">F7</div><div class="key1x1 l1">F8</div><div class="nc50"></div>
+<div class="key1x1 l1">F9</div><div class="key1x1 l1">F10</div><div class="key1x1 l1">F11</div><div class="key1x1 l1">F12</div><div class="nc50"></div>
+-->
+<!--
+
+<div class="key1x1 nc"></div>
+
+<div class="key1x1 l1">Delete</div>-->
 
 <div class="clear"></div>
 
 <div class="nc50"></div><div class="clear"></div>
-<div class="key1x1 l1"><div>&amp;</div><div>?</div><div>7</div></div>
-<div class="key1x1 l1"><div>*</div><div></div><div>8</div></div>
-<div class="key1x1 l1"><div>(</div><div></div><div>9</div></div>
-<div class="key1x1 l1"><div>)</div><div></div><div>0</div></div>
-<div class="key1x1 l1"><div>_</div><div></div><div>-</div></div>
-<div class="key1x1 l1"><div>+</div><div></div><div>=</div></div>
-<div class="key1x2 l1">Backspace</div>
+<div class="key1x1 l1"><div>&amp;</div><div>?</div><div>7</div><div>F7</div></div>
+<div class="key1x1 l1"><div>*</div><div></div><div>8</div><div>F8</div></div>
+<!--
+<div class="key1x1 l1"><div>(</div><div></div><div>9</div><div>F9</div></div>
+<div class="key1x1 l1"><div>)</div><div></div><div>0</div><div>F10</div></div>
+<div class="key1x1 l1"><div>_</div><div></div><div>-</div><div>F11</div></div>
+<div class="key1x1 l1"><div>+</div><div></div><div>=</div><div>F12</div></div>-->
+
+<div class="key1x1 l1"><div>(</div><div>F9</div><div>9</div></div>
+<div class="key1x1 l1"><div>)</div><div>F10</div><div>0</div></div>
+<div class="key1x1 l1"><div>_</div><div>F11</div><div>-</div></div>
+<div class="key1x1 l1"><div>+</div><div>F12</div><div>=</div></div>
+
+<div class="key1x2 l1">Backspace<br>Delete</div>
 <div class="clear"></div>
 
 <div class="key1x1 l1"><div>Y</div><div></div><div>y</div>Í</div>
@@ -234,8 +257,12 @@
 <!--<div class="key1x1 nc"></div>-->
 <div class="key1x125 l1">FN</div>
 
-<div class="key1x1 nc"></div>
+<!--<div class="key1x1 nc"></div>-->
+
 <div class=" ncrs"></div>
+
+
+<div class="key1x1 l1 key_sl">Scroll&nbsp;Lock</div>
 
 <div class="key1x125 l1">Alt</div>
 
